# Week-3-4-Gazebo-basics

./: LICENSE  README.md
bme_gazebo_basics/: CMakeLists.txt  package.xml
bme_gazebo_basics/launch/: check_urdf.py  spawn_robot.launch.py  spawn_robot.py  world.launch.py  world.py
bme_gazebo_basics/meshes/: mogi_bot.SLDPRT  mogi_bot.STEP  mogi_bot.STL  mogi_bot.blend  mogi_bot.dae  wheel.SLDPRT  wheel.STEP  wheel.STL  wheel.blend  wheel.dae
bme_gazebo_basics/rviz/: rviz.rviz  urdf.rviz
bme_gazebo_basics/urdf/: mogi_bot.gazebo  mogi_bot.urdf  mogi_bot_mecanum.gazebo  mogi_bot_mecanum.urdf  mogi_bot_skid_steer.gazebo  mogi_bot_skid_steer.urdf
bme_gazebo_basics/worlds/: empty.sdf  world.sdf
