<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bme_gazebo_basics</name>
  <version>1.0.0</version>
  <description>
    Basics of Gazebo Harmonic with ROS Jazzy for BME MOGI ROS2 course
  </description>
  <maintainer email="david.dudas@outlook.com">David Dudas</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
